WebP + retina final

--- a/source/index.html
+++ b/source/index.html
@@ -50,7 +50,8 @@
       <div class="hero__img">
         <picture>
           <source type="image/webp" srcset="img/hero.webp 1x, img/hero@2x.webp 2x">
-          <img class="" src="img/hero.jpg" srcset="img/hero@2x.jpg 2x" width="328" height="184" alt="Лаборант держит пробирку">
+          <img class="" src="img/hero.jpg" srcset="img/hero@2x.jpg 2x" width="328" height="184"
+            alt="Лаборант держит пробирку">
         </picture>
 
       </div>
@@ -95,17 +96,17 @@
 
         <div class="vaccine__groupe">
           <div class="vaccine__wrapper">
-            <img src="img/moderna.svg" width="74" height="17" alt="Логотип Moderna"></img>
+            <img src="img/moderna.svg" width="74" height="17" alt="Логотип Moderna">
             <div class="vaccine__name vaccine__name--first">Moderna</div>
             <div class="vaccine__percent">+313.1%</div>
           </div>
           <div class="vaccine__wrapper">
-            <img src="img/astraZeneca.svg" width="94" height="24" alt="Логотип AstraZeneca"></img>
+            <img src="img/astraZeneca.svg" width="94" height="24" alt="Логотип AstraZeneca">
             <div class="vaccine__name vaccine__name--second">AstraZeneca</div>
             <div class="vaccine__percent">+286.8%</div>
           </div>
           <div class="vaccine__wrapper">
-            <img src="img/pfizer.svg" width="40" height="24" alt="Логотип Pfizer"></img>
+            <img src="img/pfizer.svg" width="40" height="24" alt="Логотип Pfizer">
             <div class="vaccine__name vaccine__name--third">Pfizer</div>
             <div class="vaccine__percent">+218.4%</div>
           </div>
@@ -152,31 +153,37 @@
       <div class="achievements">
         <div class="achievements__img">
           <picture>
-            <source type="image/webp" media="(min-width: 1200px)" srcset="img/newsBlock1Desktop.webp 1x, img/newsBlock1Desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 1200px)"
+              srcset="img/newsBlock1Desktop.webp 1x, img/newsBlock1Desktop@2x.webp 2x">
             <source type="image/webp" srcset="img/newsBlock1.webp 1x, img/newsBlock1@2x.webp 2x">
 
             <source media="(min-width: 1200px)" srcset="img/newsBlock1Desktop.jpg 1x, img/newsBlock1Desktop@2x.jpg 2x">
-            <img class="" src="img/newsBlock1.jpg" srcset="img/newsBlock1@2x.jpg 2x" width="311" height="296" alt="Новость 'Экономическая правда'">
+            <img class="" src="img/newsBlock1.jpg" srcset="img/newsBlock1@2x.jpg 2x" width="311" height="296"
+              alt="Новость 'Экономическая правда'">
           </picture>
         </div>
 
         <div class="achievements__img">
           <picture>
-            <source type="image/webp" media="(min-width: 1200px)" srcset="img/newsBlock2Desktop.webp 1x, img/newsBlock2Desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 1200px)"
+              srcset="img/newsBlock2Desktop.webp 1x, img/newsBlock2Desktop@2x.webp 2x">
             <source type="image/webp" srcset="img/newsBlock2.webp 1x, img/newsBlock2@2x.webp 2x">
 
             <source media="(min-width: 1200px)" srcset="img/newsBlock2Desktop.jpg 1x, img/newsBlock2Desktop@2x.jpg 2x">
-            <img class="" src="img/newsBlock2.jpg" srcset="img/newsBlock2@2x.jpg 2x" width="311" height="408" alt="Новость 'Лига.Нет'">
+            <img class="" src="img/newsBlock2.jpg" srcset="img/newsBlock2@2x.jpg 2x" width="311" height="408"
+              alt="Новость 'Лига.Нет'">
           </picture>
         </div>
 
         <div class="achievements__img">
           <picture>
-            <source type="image/webp" media="(min-width: 1200px)" srcset="img/newsBlock3Desktop.webp 1x, img/newsBlock3Desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 1200px)"
+              srcset="img/newsBlock3Desktop.webp 1x, img/newsBlock3Desktop@2x.webp 2x">
             <source type="image/webp" srcset="img/newsBlock3.webp 1x, img/newsBlock3@2x.webp 2x">
 
             <source media="(min-width: 1200px)" srcset="img/newsBlock3Desktop.jpg 1x, img/newsBlock3Desktop@2x.jpg 2x">
-            <img class="" src="img/newsBlock3.jpg" srcset="img/newsBlock3@2x.jpg 2x" width="311" height="492" alt="Новость 'РБК'">
+            <img class="" src="img/newsBlock3.jpg" srcset="img/newsBlock3@2x.jpg 2x" width="311" height="492"
+              alt="Новость 'РБК'">
           </picture>
         </div>
       </div>
@@ -190,7 +197,7 @@
       <div class="currency">
         <div class="currency__wrapper">
           <div class="currency__about">
-            <img class="currency__img" src="img/pfizer.svg" width="40" height="24" alt="Логотип Pfizer"></img>
+            <img class="currency__img" src="img/pfizer.svg" width="40" height="24" alt="Логотип Pfizer">
             <span class="currency__name">Pfizer</span>
             <span class="currency__percent">$50.42</span>
           </div>
@@ -201,7 +208,7 @@
 
         <div class="currency__wrapper">
           <div class="currency__about">
-            <img class="currency__img" src="img/astraZeneca.svg" width="94" height="24" alt="Логотип AstraZeneca"></img>
+            <img class="currency__img" src="img/astraZeneca.svg" width="94" height="24" alt="Логотип AstraZeneca">
             <span class="currency__name">AstraZeneca</span>
             <span class="currency__percent">$59.35</span>
           </div>
@@ -212,7 +219,7 @@
 
         <div class="currency__wrapper">
           <div class="currency__about">
-            <img class="currency__img" src="img/moderna.svg" width="74" height="17" alt="Логотип Moderna"></img>
+            <img class="currency__img" src="img/moderna.svg" width="74" height="17" alt="Логотип Moderna">
             <span class="currency__name">Moderna</span>
             <span class="currency__percent">$401.86</span>
           </div>
@@ -224,7 +231,7 @@
         <div class="currency__wrapper">
           <div class="currency__about">
             <img class="currency__img" src="img/johnson&johnson.svg" width="120" height="24"
-              alt="Логотип Johnson & Johnson"></img>
+              alt="Логотип Johnson & Johnson">
             <span class="currency__name">Johnson & Johnson</span>
             <span class="currency__percent">$179.47</span>
           </div>
@@ -239,8 +246,6 @@
           <source media="(min-width: 1200px)" srcset="img/graphDesktop.svg">
           <img class="currency__table" src="img/graph.svg" width="328" height="360" alt="График с курсом акций">
         </picture>
-
-        <!-- <img src="img/graph.svg" width="328" height="360" alt="График с курсом акций"></img> -->
       </div>
     </section>
 
@@ -290,13 +295,14 @@
         </p>
         <p class="how-it-work__more">
           Проект VaccInvest - уникален тем, что анализирует больше связанных с индустрией явлений, чем кто-либо другой:
+        </p>
         <ul class="how-it-work__list">
           <li>темпы производства и поставок медпрепаратов</li>
           <li>актуальную социальную востребованность</li>
           <li>влияние на внутреннюю экономику и геополитику стран</li>
           <li>покрытие транспортных расходов</li>
         </ul>
-        </p>
+
       </div>
     </section>
 
@@ -312,7 +318,7 @@
           </p>
           <div class="calculate__action">
             <label class="calculae__call">Впишите сумму инвестирования
-              <input class="calculate__value" type="text" id="value" name="value" placeholder="200$"></input>
+              <input class="calculate__value" type="text" id="value" name="value" placeholder="200$">
             </label>
           </div>
           <div class="calculate__progress"></div>
@@ -321,7 +327,11 @@
         </div>
 
         <div class="calculate__wrapper calculate__wrapper--img">
-          <img class="calculate__img" src="img/laboratory.jpg" width="320" height="262" alt="Лаборанты в лаборатории">
+          <picture>
+            <source type="image/webp" srcset="img/laboratory.webp 1x, img/laboratory@2x.webp 2x">
+            <img class="calculate__img" src="img/laboratory.jpg" srcset="img/laboratory@2x.jpg 2x" width="320"
+              height="262" alt="Лаборанты в лаборатории">
+          </picture>
         </div>
 
       </div>
@@ -334,13 +344,13 @@
 
       <div class="form__wrapper">
         <label class="visually-hidden" for="name1">Введите имя и фамилию</label>
-        <input type="text" id="name1" name="name" placeholder="Имя Фамилия">
+        <input type="text" id="name2" name="name" placeholder="Имя Фамилия">
 
         <label class="visually-hidden" for="tel1">Введите телефон</label>
-        <input type="tel" id="tel1" name="tel" placeholder="Телефон">
+        <input type="tel" id="tel2" name="tel" placeholder="Телефон">
 
         <label class="visually-hidden" for="email1">Введите email</label>
-        <input type="email" id="email1" name="email1" placeholder="Почта">
+        <input type="email" id="email2" name="email1" placeholder="Почта">
       </div>
 
       <button class="button button--open-navigation-posotion button--desktop-w303-center main-nav__button"
