--- a/source/politics.html
+++ b/source/politics.html
@@ -10,6 +10,16 @@
 </head>
 
 <body class="page-body">
+
+  <header class="page-header">
+    <a href="index.html">
+      <div class="logo">
+        <img class="logo__img" src="img/logo.png" width="35" height="35" alt="VaccInvest логотип">
+        <p class="logo__name">VaccInvest</p>
+      </div>
+    </a>
+  </header>
+
   <section class="conditions-politics">
 
     <div class="legal-content">
@@ -293,9 +303,29 @@
 
       Пожалуйста, используйте слова «Защита данных» в строке темы.
     </div>
-
-
   </section>
+
+  <footer class="footer">
+    <section class="terms-and-policy">
+      <h3 class="terms-and-policy__title visually-hidden">Политика и условия</h3>
+      <ul class="terms-and-policy__list">
+        <li class="terms-and-policy__item"><a href="conditions.html">Политика конфедициальности</a></li>
+        <li class="terms-and-policy__item terms-and-policy__item--current"><a href="#">Условия и положения</a></li>
+      </ul>
+    </section>
+
+    <section class="copyright">
+      <h3 class="copyrightl__title visually-hidden">Copyright</h3>
+      <a href="index.html">
+        <div class="logo">
+          <img class="logo__img" src="img/logo.png" width="35" height="35" alt="VaccInvest логотип">
+          <p class="logo__name logo__name--fs22-lh24">VaccInvest</p>
+        </div>
+      </a>
+
+      <p class="copyright__data">©2021 All rights Reserved</p>
+    </section>
+  </footer>
 </body>
 
 </html>
