--- a/source/index.html
+++ b/source/index.html
@@ -337,20 +337,24 @@
             укажите начальную сумму инвестиций. Система просчитает возможный доход, учитывая статистические данные.
           </p>
           <div class="calculate__action">
-            <label class="calculae__call">Впишите сумму инвестирования
-              <input class="calculate__value" type="text" id="value" name="value" placeholder="200$">
+            <label class="calculate__label">Впишите сумму инвестирования
+              <span class="calculate__bollar">$</span>
+              <input class="calculate__value" type="number" id="value" name="value" placeholder="200" step="100" min="0" max="1000000">
             </label>
           </div>
           <div class="calculate__progress"></div>
           <div class="calculate__result">
             <div class="calculate__bar calculate__bar--dark"></div>
-            <span>Другие акции</span>
+            <span class="calculate__type">Другие акции</span>
+            <span class="calculate__profit calculate__profit--dark"></span>
           </div>
 
           <div class="calculate__result">
             <div class="calculate__bar calculate__bar--blue"></div>
-            <span>Вакцины</span>
+            <span class="calculate__type">Вакцины</span>
+            <span class="calculate__profit calculate__profit--blue"></span>
           </div>
+          <span class="calculate__value__blue"></span>
         </div>
 
         <div class="calculate__wrapper calculate__wrapper--img">
