--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,82 @@
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
   <link rel="manifest" href="site.webmanifest">
   <!-- <link rel="preload" href="./fonts/Raleway-Medium.woff2" as="font"> -->
+
+
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return;
+      n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n;
+      n.push = n;
+      n.loaded = !0;
+      n.version = '2.0';
+      n.queue = [];
+      t = b.createElement(e);
+      t.async = !0;
+      t.src = v;
+      s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '<?php echo isset($_GET['fb_pixel']) ? $_GET['fb_pixel'] : '000000000000000'; ?>');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=<?php echo isset($_GET['fb_pixel']) ? $_GET['fb_pixel'] : '000000000000000'; ?>&ev=PageView&noscript=1" /></noscript>
+  <!-- End Facebook Pixel Code -->
+
+  <script async
+    src="https://www.googletagmanager.com/gtag/js?id=AW-<?php echo isset($_GET['ga_id']) ? $_GET['ga_id'] : '000000000000000'; ?>"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'AW-<?php echo isset($_GET['ga_id']) ? $_GET['ga_id'] : '000000000000000'; ?>');
+  </script>
+  <script>
+    function call_gtag() {
+      gtag('event', 'conversion', { 'send_to': 'AW-<?php echo isset($_GET['ga_id']) ? $_GET['ga_id'] : '000000000000000'; ?>/<?php echo isset($_GET['ga_event']) ? $_GET['ga_event'] : '000000000000000'; ?>'});
+    }
+
+  </script>
+  <!-- End GTAG Code -->
+
+  <!-- TikTok Code -->
+  <script>
+    !function (w, d, t) {
+      w.TiktokAnalyticsObject = t;
+      var ttq = w[t] = w[t] || [];
+      ttq.methods = ["page", "track", "identify", "instances", "debug", "on", "off", "once", "ready", "alias", "group", "enableCookie", "disableCookie"], ttq.setAndDefer = function (t, e) {
+        t[e] = function () {
+          t.push([e].concat(Array.prototype.slice.call(arguments, 0)))
+        }
+      };
+      for (var i = 0; i < ttq.methods.length; i++) ttq.setAndDefer(ttq, ttq.methods[i]);
+      ttq.instance = function (t) {
+        for (var e = ttq._i[t] || [], n = 0; n < ttq.methods.length; n++) ttq.setAndDefer(e, ttq.methods[n]);
+        return e
+      }, ttq.load = function (e, n) {
+        var i = "https://analytics.tiktok.com/i18n/pixel/events.js";
+        ttq._i = ttq._i || {}, ttq._i[e] = [], ttq._i[e]._u = i, ttq._t = ttq._t || {}, ttq._t[e] = +new Date, ttq._o = ttq._o || {}, ttq._o[e] = n || {};
+        var o = document.createElement("script");
+        o.type = "text/javascript", o.async = !0, o.src = i + "?sdkid=" + e + "&lib=" + t;
+        var a = document.getElementsByTagName("script")[0];
+        a.parentNode.insertBefore(o, a)
+      };
+
+      ttq.load('<?php echo isset($_GET['tiktok']) ? $_GET['tiktok'] : '000000000000000'; ?>');
+    }(window, document, 'ttq');
+  </script>
+  <!-- End TikTok Code -->
 </head>
 
 <body class="page-body">
@@ -56,7 +132,7 @@
 
       </div>
 
-      <form class="form form--top">
+      <form class="form form--top" action="<?= $form; ?>" method="POST" id="leadform1">
         <h1 class="form__heading form__heading--mobile">Получайте стабильные дивиденды от 80% в&nbsp;месяц</h1>
         <h1 class="form__heading form__heading--desktop">Инвестируйте в акции медицинских компаний и получайте
           стабильные дивиденды
@@ -64,16 +140,23 @@
 
         <div class="form__wrapper">
           <label class="visually-hidden" for="name1">Введите имя и фамилию</label>
-          <input type="text" id="name1" name="name" placeholder="Имя Фамилия" required>
+          <input type="text" id="name" name="name" placeholder="Имя Фамилия">
 
           <label class="visually-hidden" for="tel1">Введите телефон</label>
-          <input type="tel" id="tel1" name="tel" placeholder="Телефон" required>
+          <input type="tel" id="phone1" name="phone1" placeholder="">
 
           <label class="visually-hidden" for="email1">Введите email</label>
-          <input type="email" id="email1" name="email1" placeholder="Почта" required>
+          <input type="email" id="email" name="email" placeholder="Почта">
+
+          <input id="realPhone1" class="hidden-phone" type="hidden" name="phone" value="" />
+
+          <input type="hidden" name="currency" value="eur">
+          <input id="country1" type="hidden" name="country" value="ru">
+          <input type="hidden" name="comment" class="comment" value="">
+          <input type="hidden" name="campaign_name" value="">
         </div>
 
-        <button class="button button--open-navigation-posotion button--desktop-w275 main-nav__button"
+        <button class="submit_btn button button--open-navigation-posotion button--desktop-w275 main-nav__button"
           type="submit">Начать зарабатывать
           <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -81,6 +164,10 @@
               fill="#333" />
           </svg>
         </button>
+
+        <div class="form_message error inactive"
+          style="margin:15px 0;background-color: #ffd4d4;border: 2px dashed #ce0909;border-radius: 10px;padding: 20px;max-width: 350px;">
+        </div>
       </form>
 
     </section>
@@ -339,7 +426,8 @@
           <div class="calculate__action">
             <label class="calculate__label">Впишите сумму инвестирования
               <span class="calculate__bollar">$</span>
-              <input class="calculate__value" type="number" id="value" name="value" placeholder="200" step="100" min="0" max="1000000">
+              <input class="calculate__value" type="number" id="value" name="value" placeholder="200" step="100" min="0"
+                max="1000000">
             </label>
           </div>
           <div class="calculate__progress"></div>
@@ -368,23 +456,29 @@
       </div>
     </section>
 
-    <form class="form form--bottom" id="form2">
+    <form class="form form--bottom"action="<?= $form; ?>" method="POST" id="leadform2">
       <h2 class="form__heading form__heading--center">Используйте передовые технологии для анализа рынка и зарабатывайте
         уже сегодня на том,
         что будет популярно завтра</h2>
 
       <div class="form__wrapper">
-        <label class="visually-hidden" for="name1">Введите имя и фамилию</label>
-        <input type="text" id="name2" name="name" placeholder="Имя Фамилия" required>
+        <label class="visually-hidden" for="name2">Введите имя и фамилию</label>
+        <input type="text" id="name2" name="name" placeholder="Имя Фамилия">
 
-        <label class="visually-hidden" for="tel1">Введите телефон</label>
-        <input type="tel" id="tel2" name="tel" placeholder="Телефон" required>
+        <label class="visually-hidden" for="phone2">Введите телефон</label>
+        <input type="tel" id="phone2" name="phone2" placeholder="">
 
-        <label class="visually-hidden" for="email1">Введите email</label>
-        <input type="email" id="email2" name="email1" placeholder="Почта" required>
+        <label class="visually-hidden" for="email2">Введите email</label>
+        <input type="email" id="email2" name="email" placeholder="Почта">
       </div>
 
-      <button class="button button--open-navigation-posotion button--desktop-w303-center main-nav__button"
+      <input id="realPhone2" class="hidden-phone" type="hidden" name="phone" value="" />
+      <input type="hidden" name="currency" value="eur">
+      <input id="country2" type="hidden" name="country" value="ru">
+      <input type="hidden" name="comment" class="comment" value="">
+      <input type="hidden" name="campaign_name" value="">
+
+      <button class="submit_btn button button--open-navigation-posotion button--desktop-w303-center main-nav__button"
         type="submit">Начать зарабатывать
         <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -392,7 +486,21 @@
             fill="#333" />
         </svg>
       </button>
+
+      <div class="form_message error inactive"
+        style="margin:15px 0;background-color: #ffd4d4;border: 2px dashed #ce0909;border-radius: 10px;padding: 20px;">
+      </div>
     </form>
+
+    <style>
+      .form_message.error.inactive {
+        display: none;
+      }
+
+      .form_message.error.active {
+        display: block;
+      }
+    </style>
   </main>
 
   <footer class="footer">
@@ -415,6 +523,275 @@
   </footer>
 
   <script src="js/script.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+
+
+  <script>
+
+    //first form
+    var input1 = document.querySelector("#phone1");
+    var phoneInput1 = window.intlTelInput(input1, {
+        separateDialCode: true,
+        utilsScript:
+            "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
+        initialCountry: "auto",
+        excludeCountries: ["RU", "BY", "MD"],
+        geoIpLookup: function (success, failure) {
+            $.get("https://ipinfo.io", function () {
+            }, "jsonp").always(function (resp) {
+                console.log(resp.country);
+                $("#country1").val(resp.country);
+                $("#country2").val(resp.country);
+                var countryCode =
+                    resp && checkCountry(resp.country) ? resp.country : "DE";
+                success(countryCode);
+            });
+        },
+    });
+
+    function checkCountry(code) {
+        var arr = ["RU", "BY", "MD"];
+        console.log(code);
+        console.log(arr.includes(code));
+        return !arr.includes(code);
+    }
+
+    $.validator.addMethod(
+        "validNumber",
+        function (value, element, params) {
+            var obj = params.object;
+            if (obj.isValidNumber()) {
+                var num = obj.getNumber().replace("+", "");
+                console.log(num);
+                $(element)
+                    .closest("form")
+                    .find(".hidden-phone")
+                    .val("+" + num);
+            }
+            return obj.isValidNumber();
+        },
+        "Введите правильный номер!"
+    );
+
+    // Запрет ввода в поля больше двух пробелов подряд
+    const nameForm1 = document.querySelector("#name");
+    const nameForm2 = document.querySelector("#name2");
+    const emailForm1 = document.querySelector("#email");
+    const emailForm2 = document.querySelector("#email2");
+
+    function removeExtraSpaces(e) {
+        const valueWithoutSpaces = e.target.value.replace(/\s+/g, ' ').replace(/^\s+|\s+$/,'');
+        e.target.value = valueWithoutSpaces
+    }
+    nameForm1.addEventListener("focusout", removeExtraSpaces);
+    nameForm2.addEventListener("focusout", removeExtraSpaces);
+
+    // Валидация формы
+    $.validator.addMethod(
+        "alphanumeric",
+        function (value, element) {
+            return this.optional(element) || /^[a-zA-Zа-яА-ЯЁё\s]+$/.test(value.replace(/ +/g, ' ').trim()); //RU
+        },
+        "Имя может содержать только буквы!"
+    );
+    // Email validation
+    $.validator.addMethod("emailValidation", function(value, element) {
+        return this.optional(element) || /^[a-zA-Z0-9_.!#$%&\'*+\-\/=?^_`{|}~]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?){1,61}$/g.test( value );
+    }, "Введите правильный email!");
+
+
+    function removeDotsHyphens(e){
+        const valueWithoutDotsHyphens = e.target.value.replace(/\.+/g,'.').replace(/-{2,}/g,'--').replace(/^\.|^-*/,'').replace(/\.@/,'@');
+        e.target.value = valueWithoutDotsHyphens;
+    }
+    emailForm1.addEventListener("change", removeDotsHyphens);
+    emailForm2.addEventListener("change", removeDotsHyphens);
+
+    //Trim whitespace on email input
+    $(function()
+    {
+        $('input[type=email]').on('keypress', function(e)
+        {
+            if (e.which == 32)
+                return false;
+        });
+    });
+
+    $("#leadform1").validate({
+        rules: {
+            phone1: {
+                required: true,
+                validNumber: {
+                    object: phoneInput1,
+                },
+            },
+            name: {
+                required: true,
+                alphanumeric: true,
+            },
+            email: {
+                required: true,
+                email:false,
+                emailValidation: true,
+            }
+        },
+        messages: {
+            phone1: {
+                required: "Это поле обязательное",
+            },
+            name: {
+                required: "Это поле обязательное",
+            },
+            email: {
+                required: "Это поле обязательное"
+            },
+        },
+        submitHandler: function (form, event) {
+            sendAjaxForm(form);
+            return false;
+
+        }
+    });
+
+    function sendAjaxForm(form) {
+        $.ajax({
+            url: $(form).attr('action'),
+            type: "POST", //метод отправки
+            dataType: "json", //формат данных
+            data: $(form).serialize(),  // Сеарилизуем объект
+            timeout: 30000,
+            beforeSend: function () {
+                $(form).find(".submit_btn ").html('Отправка');
+                $(form).find(".submit_btn").prop('disabled', true); // disable button
+            },
+
+        }).done(function (response) { //Данные отправлены успешно
+            let result = response;
+            let url = result.url;
+            console.log(response);
+            if (response.status === 'ok') {
+                fbq('track', 'Lead');
+                call_gtag();
+                ttq.page();
+                console.log('Lead');
+                $(form).find(".submit_btn").html('Данные отправлены успешно');
+                if (response.url) {
+                    setTimeout(function () {
+                        window.location.href = response.url;
+                    }, 1000);
+                } else {
+                    $(form).html('<div class="form_message success" style="display: block;margin:15px 0;background-color: #d4ffe0;border: 2px dashed #1f6b34;border-radius: 10px;padding: 20px;">Ваши данные успешно отправлены. Ожидайте звонка от нашего менеджера.</div>');
+                }
+
+            } else {
+                $(form).find('.error.form_message').addClass('active');
+                $(form).find('.error.form_message').html(response.message);
+                $(form).find(".submit_btn ").html('Начать зарабатывать');
+                $(form).find(".submit_btn").prop('disabled', false); // disable button
+            }
+
+
+        }).fail(function (response) { // Данные не отправлены
+            console.log(response);
+            console.log('Ошибка. Данные не отправлены.');
+            $(form).find('.error.form_message').addClass('active');
+            $(form).find('.error.form_message').html('Во время отправки данных произошла ошибка!');
+            $(form).find(".submit_btn ").html('Начать зарабатывать');
+            $(form).find(".submit_btn").prop('disabled', false); // disable button
+        });
+    }
+
+    $(window).on("load", function () {
+        setTimeout(function () {
+            var mask1 = jQuery("#phone1").attr("placeholder").replace(/[0-9]/g, 9);
+
+            $(document).ready(function () {
+                jQuery("#phone1").mask(mask1);
+            });
+
+            jQuery("#phone1").on("countrychange", function (e, countryData) {
+                jQuery("#phone1").val("");
+                var mask1 = $("#phone1").attr("placeholder").replace(/[0-9]/g, 9);
+                jQuery("#phone1").mask(mask1);
+            });
+        }, 1000);
+    });
+    //second form
+    var input2 = document.querySelector("#phone2");
+    var phoneInput2 = window.intlTelInput(input2, {
+        separateDialCode: true,
+        utilsScript:
+            "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
+        initialCountry: "auto",
+        excludeCountries: ["RU", "BY", "MD"],
+        geoIpLookup: function (success, failure) {
+            $.get("https://ipinfo.io", function () {
+            }, "jsonp").always(function (resp) {
+                console.log(resp.country);
+                var countryCode =
+                    resp && checkCountry(resp.country) ? resp.country : "DE";
+                success(countryCode);
+            });
+        },
+    });
+
+    $("#leadform2").validate({
+        rules: {
+            phone2: {
+                required: true,
+                validNumber: {
+                    object: phoneInput2,
+                },
+            },
+            name: {
+                required: true,
+                alphanumeric: true,
+            },
+            email: {
+                required: true,
+                email:false,
+                emailValidation: true,
+            }
+        },
+        messages: {
+            phone2: {
+                required: "Это поле обязательное",
+            },
+            name: {
+                required: "Это поле обязательное",
+            },
+            email: {
+                required: "Это поле обязательное"
+            },
+        },
+        submitHandler: function (form, event) {
+            sendAjaxForm(form);
+            return false;
+
+        },
+    });
+
+    $(window).on("load", function () {
+        setTimeout(function () {
+            var mask1 = jQuery("#phone2").attr("placeholder").replace(/[0-9]/g, 9);
+
+            $(document).ready(function () {
+                jQuery("#phone2").mask(mask1);
+            });
+
+            jQuery("#phone2").on("countrychange", function (e, countryData) {
+                jQuery("#phone2").val("");
+                var mask1 = $("#phone2").attr("placeholder").replace(/[0-9]/g, 9);
+                jQuery("#phone2").mask(mask1);
+            });
+        }, 1000);
+    });
+    //
+</script>
 </body>
 
 </html>
