Closing mobile menu after nav item click

--- a/source/index.html
+++ b/source/index.html
@@ -99,14 +99,14 @@
 
     <nav class="main-nav main-nav--closed main-nav--nojs">
       <ul class="main-nav__list">
-        <li class="main-nav__item"><a href="#about">Про проект</a></li>
-        <li class="main-nav__item"><a href="#vaccine">Статистика</a></li>
-        <li class="main-nav__item"><a href="#currency">Акции</a></li>
-        <li class="main-nav__item"><a href="#calculate">Калькулятор</a></li>
-        <li class="main-nav__item"><a href="#to-do">Преимущества</a></li>
+        <li class="main-nav__item" onclick="closeMobileMenu()"><a href="#about">Про проект</a></li>
+        <li class="main-nav__item" onclick="closeMobileMenu()"><a href="#vaccine">Статистика</a></li>
+        <li class="main-nav__item" onclick="closeMobileMenu()"><a href="#currency">Акции</a></li>
+        <li class="main-nav__item" onclick="closeMobileMenu()"><a href="#calculate">Калькулятор</a></li>
+        <li class="main-nav__item" onclick="closeMobileMenu()"><a href="#to-do">Преимущества</a></li>
       </ul>
 
-      <a class="button button--main-nav main-nav__button" href="#form2">Начать зарабатывать
+      <a class="button button--main-nav main-nav__button" href="#leadform2" onclick="closeMobileMenu()">Начать&nbsp;зарабатывать
         <!--main-nav__button - скрывает при закрытом меню на мобилке кнопку-->
         <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
