Styling of heading & eror styling

--- a/source/index.html
+++ b/source/index.html
@@ -234,7 +234,7 @@
 
       <div class="about">
         <div class="about__wrapper">
-          <img class="about__img" src="img/chart.svg" width="300" height="302" alt="Силует планеты Земля">
+          <img class="about__img" src="img/chart.png" width="300" height="302" alt="Силует планеты Земля">
           <h3 class="about__title"><span>3,5&nbsp;млрд</span><br>вакцинировалось</h3>
           <p class="about__info">Каждый день вакцинируются около <b>10&nbsp;-&nbsp;100&nbsp;тыс</b></p>
         </div>
@@ -442,7 +442,7 @@
           <div class="calculate__action">
             <label class="calculate__label">Впишите сумму инвестирования
               <span class="calculate__bollar">$</span>
-              <input class="calculate__value" type="number" id="value" name="value" placeholder="200" step="100" min="0"
+              <input class="calculate__value" type="number" id="value" value="250" step="50" min="250"
                 max="1000000">
             </label>
           </div>
