--- a/source/index.html
+++ b/source/index.html
@@ -227,7 +227,7 @@
       <a class="button button--vaccine" href="#leadform2">Подтвердить выбор</a>
     </section>
 
-    <section class="main-section" id="about">
+    <section class="main-section main-section--desktop-mb0" id="about">
       <div class="main-section__heading-wrapper main-section__heading-wrapper--bcg-about">
         <h2 class="main-section__heading">О проекте</h2>
       </div>
@@ -238,7 +238,7 @@
           <h3 class="about__title"><span>3,5&nbsp;млрд</span><br>вакцинировалось</h3>
           <p class="about__info">Каждый день вакцинируются около <b>10&nbsp;-&nbsp;100&nbsp;тыс</b></p>
         </div>
-        <div class="about__wrapper about__wrapper--dashed">
+        <div class="about__wrapper about__wrapper--dashed about__wrapper--desctop-bcg">
           <p class="about__more about__more--first">
             Акции производителей самых эффективных вакцин дорожают каждый день пандемии.
             Вложения в ценные бумаги крупнейших фармакологических компаний обеспечивают сотням инвесторов стабильный
